parsers/src/main/java/raw/compiler/rql2/generated/SnapiParser.java
// Generated from SnapiParser.g4 by ANTLR 4.13.1
package raw.compiler.rql2.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SnapiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE_TOKEN=1, BOOL_TOKEN=2, STRING_TOKEN=3, LOCATION_TOKEN=4, BINARY_TOKEN=5, 
		BYTE_TOKEN=6, SHORT_TOKEN=7, INT_TOKEN=8, LONG_TOKEN=9, FLOAT_TOKEN=10, 
		DOUBLE_TOKEN=11, DECIMAL_TOKEN=12, DATE_TOKEN=13, TIME_TOKEN=14, INTERVAL_TOKEN=15, 
		TIMESTAMP_TOKEN=16, RECORD_TOKEN=17, COLLECTION_TOKEN=18, LIST_TOKEN=19, 
		LIBRARY_TOKEN=20, PACKAGE_TOKEN=21, LET_TOKEN=22, IN_TOKEN=23, REC_TOKEN=24, 
		UNDEFINED_TOKEN=25, IF_TOKEN=26, THEN_TOKEN=27, ELSE_TOKEN=28, NULL_TOKEN=29, 
		BYTE=30, SHORT=31, INTEGER=32, LONG=33, FLOAT=34, DOUBLE=35, DECIMAL=36, 
		EQ_TOKEN=37, NEQ_TOKEN=38, LE_TOKEN=39, LT_TOKEN=40, GE_TOKEN=41, GT_TOKEN=42, 
		PLUS_TOKEN=43, MINUS_TOKEN=44, MUL_TOKEN=45, DIV_TOKEN=46, MOD_TOKEN=47, 
		AND_TOKEN=48, OR_TOKEN=49, NOT_TOKEN=50, TRUE_TOKEN=51, FALSE_TOKEN=52, 
		STRING=53, START_TRIPLE_QUOTE=54, NON_ESC_IDENTIFIER=55, ESC_IDENTIFIER=56, 
		WS=57, LINE_COMMENT=58, UNICODE=59, HEX=60, LEFT_PAREN=61, RIGHT_PAREN=62, 
		COLON=63, COMMA=64, EQUALS=65, RIGHT_ARROW=66, DOT=67, LEFT_CUR_BR=68, 
		RIGHT_CUR_BR=69, LEFT_SQ_BR=70, RIGHT_SQ_BR=71, BINARY_CONST=72, NULLABLE_TOKEN=73, 
		TRYABLE_TOKEN=74, DOLLAR_TOKEN=75, TRIPLE_QUOTED_STRING_CONTENT=76, TRIPLE_QUOTE_END_2=77, 
		TRIPLE_QUOTE_END_1=78, TRIPLE_QUOTE_END_0=79;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_method_dec = 2, RULE_fun_dec = 3, RULE_fun_proto = 4, 
		RULE_fun_param = 5, RULE_attr = 6, RULE_type_attr = 7, RULE_fun_ar = 8, 
		RULE_fun_args = 9, RULE_fun_arg = 10, RULE_fun_abs = 11, RULE_fun_proto_lambda = 12, 
		RULE_tipe = 13, RULE_or_type = 14, RULE_param_list = 15, RULE_record_type = 16, 
		RULE_record_attr_list = 17, RULE_iterable_type = 18, RULE_list_type = 19, 
		RULE_expr_type = 20, RULE_expr = 21, RULE_let = 22, RULE_let_left = 23, 
		RULE_let_decl = 24, RULE_let_bind = 25, RULE_if_then_else = 26, RULE_lists = 27, 
		RULE_lists_element = 28, RULE_records = 29, RULE_record_elements = 30, 
		RULE_record_element = 31, RULE_signed_number = 32, RULE_number = 33, RULE_primitive_types = 34, 
		RULE_string_literal = 35, RULE_triple_string_literal = 36, RULE_compare_tokens = 37, 
		RULE_bool_const = 38, RULE_ident = 39, RULE_package_idn_exp = 40, RULE_nullable_tryable = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "method_dec", "fun_dec", "fun_proto", "fun_param", "attr", 
			"type_attr", "fun_ar", "fun_args", "fun_arg", "fun_abs", "fun_proto_lambda", 
			"tipe", "or_type", "param_list", "record_type", "record_attr_list", "iterable_type", 
			"list_type", "expr_type", "expr", "let", "let_left", "let_decl", "let_bind", 
			"if_then_else", "lists", "lists_element", "records", "record_elements", 
			"record_element", "signed_number", "number", "primitive_types", "string_literal", 
			"triple_string_literal", "compare_tokens", "bool_const", "ident", "package_idn_exp", 
			"nullable_tryable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'bool'", "'string'", "'location'", "'binary'", "'byte'", 
			"'short'", "'int'", "'long'", "'float'", "'double'", "'decimal'", "'date'", 
			"'time'", "'interval'", "'timestamp'", "'record'", "'collection'", "'list'", 
			"'library'", "'package'", "'let'", "'in'", "'rec'", "'undefined'", "'if'", 
			"'then'", "'else'", "'null'", null, null, null, null, null, null, null, 
			"'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'and'", "'or'", "'not'", "'true'", "'false'", null, null, null, 
			null, null, null, null, null, "'('", "')'", "':'", "','", "'='", "'->'", 
			"'.'", "'{'", "'}'", "'['", "']'", null, "'@null'", "'@try'", "'$'", 
			null, "'\"\"\"\"\"'", "'\"\"\"\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE_TOKEN", "BOOL_TOKEN", "STRING_TOKEN", "LOCATION_TOKEN", "BINARY_TOKEN", 
			"BYTE_TOKEN", "SHORT_TOKEN", "INT_TOKEN", "LONG_TOKEN", "FLOAT_TOKEN", 
			"DOUBLE_TOKEN", "DECIMAL_TOKEN", "DATE_TOKEN", "TIME_TOKEN", "INTERVAL_TOKEN", 
			"TIMESTAMP_TOKEN", "RECORD_TOKEN", "COLLECTION_TOKEN", "LIST_TOKEN", 
			"LIBRARY_TOKEN", "PACKAGE_TOKEN", "LET_TOKEN", "IN_TOKEN", "REC_TOKEN", 
			"UNDEFINED_TOKEN", "IF_TOKEN", "THEN_TOKEN", "ELSE_TOKEN", "NULL_TOKEN", 
			"BYTE", "SHORT", "INTEGER", "LONG", "FLOAT", "DOUBLE", "DECIMAL", "EQ_TOKEN", 
			"NEQ_TOKEN", "LE_TOKEN", "LT_TOKEN", "GE_TOKEN", "GT_TOKEN", "PLUS_TOKEN", 
			"MINUS_TOKEN", "MUL_TOKEN", "DIV_TOKEN", "MOD_TOKEN", "AND_TOKEN", "OR_TOKEN", 
			"NOT_TOKEN", "TRUE_TOKEN", "FALSE_TOKEN", "STRING", "START_TRIPLE_QUOTE", 
			"NON_ESC_IDENTIFIER", "ESC_IDENTIFIER", "WS", "LINE_COMMENT", "UNICODE", 
			"HEX", "LEFT_PAREN", "RIGHT_PAREN", "COLON", "COMMA", "EQUALS", "RIGHT_ARROW", 
			"DOT", "LEFT_CUR_BR", "RIGHT_CUR_BR", "LEFT_SQ_BR", "RIGHT_SQ_BR", "BINARY_CONST", 
			"NULLABLE_TOKEN", "TRYABLE_TOKEN", "DOLLAR_TOKEN", "TRIPLE_QUOTED_STRING_CONTENT", 
			"TRIPLE_QUOTE_END_2", "TRIPLE_QUOTE_END_1", "TRIPLE_QUOTE_END_0"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SnapiParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SnapiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SnapiParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			stat();
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunDecExprStatContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<Method_decContext> method_dec() {
			return getRuleContexts(Method_decContext.class);
		}
		public Method_decContext method_dec(int i) {
			return getRuleContext(Method_decContext.class,i);
		}
		public FunDecExprStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterFunDecExprStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitFunDecExprStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitFunDecExprStat(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunDecStatContext extends StatContext {
		public List<Method_decContext> method_dec() {
			return getRuleContexts(Method_decContext.class);
		}
		public Method_decContext method_dec(int i) {
			return getRuleContext(Method_decContext.class,i);
		}
		public FunDecStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterFunDecStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitFunDecStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitFunDecStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			int _alt;
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new FunDecStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 108086391091494908L) != 0)) {
					{
					{
					setState(87);
					method_dec();
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new FunDecExprStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(93);
						method_dec();
						}
						} 
					}
					setState(98);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(99);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_decContext extends ParserRuleContext {
		public Method_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_dec; }
	 
		public Method_decContext() { }
		public void copyFrom(Method_decContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodDecContext extends Method_decContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Fun_protoContext fun_proto() {
			return getRuleContext(Fun_protoContext.class,0);
		}
		public MethodDecContext(Method_decContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterMethodDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitMethodDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitMethodDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Method_decContext method_dec() throws RecognitionException {
		Method_decContext _localctx = new Method_decContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_method_dec);
		try {
			_localctx = new MethodDecContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			ident();
			setState(103);
			fun_proto();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fun_decContext extends ParserRuleContext {
		public Fun_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_dec; }
	 
		public Fun_decContext() { }
		public void copyFrom(Fun_decContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalFunContext extends Fun_decContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Fun_protoContext fun_proto() {
			return getRuleContext(Fun_protoContext.class,0);
		}
		public NormalFunContext(Fun_decContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterNormalFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitNormalFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitNormalFun(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RecFunContext extends Fun_decContext {
		public TerminalNode REC_TOKEN() { return getToken(SnapiParser.REC_TOKEN, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Fun_protoContext fun_proto() {
			return getRuleContext(Fun_protoContext.class,0);
		}
		public RecFunContext(Fun_decContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterRecFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitRecFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitRecFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fun_decContext fun_dec() throws RecognitionException {
		Fun_decContext _localctx = new Fun_decContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fun_dec);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL_TOKEN:
			case STRING_TOKEN:
			case LOCATION_TOKEN:
			case BINARY_TOKEN:
			case BYTE_TOKEN:
			case SHORT_TOKEN:
			case INT_TOKEN:
			case LONG_TOKEN:
			case FLOAT_TOKEN:
			case DOUBLE_TOKEN:
			case DECIMAL_TOKEN:
			case DATE_TOKEN:
			case TIME_TOKEN:
			case INTERVAL_TOKEN:
			case TIMESTAMP_TOKEN:
			case RECORD_TOKEN:
			case COLLECTION_TOKEN:
			case LIST_TOKEN:
			case UNDEFINED_TOKEN:
			case NON_ESC_IDENTIFIER:
			case ESC_IDENTIFIER:
				_localctx = new NormalFunContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				ident();
				setState(106);
				fun_proto();
				}
				break;
			case REC_TOKEN:
				_localctx = new RecFunContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(REC_TOKEN);
				setState(109);
				ident();
				setState(110);
				fun_proto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fun_protoContext extends ParserRuleContext {
		public TerminalNode LEFT_PAREN() { return getToken(SnapiParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(SnapiParser.RIGHT_PAREN, 0); }
		public TerminalNode EQUALS() { return getToken(SnapiParser.EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<Fun_paramContext> fun_param() {
			return getRuleContexts(Fun_paramContext.class);
		}
		public Fun_paramContext fun_param(int i) {
			return getRuleContext(Fun_paramContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SnapiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SnapiParser.COMMA, i);
		}
		public TerminalNode COLON() { return getToken(SnapiParser.COLON, 0); }
		public TipeContext tipe() {
			return getRuleContext(TipeContext.class,0);
		}
		public Fun_protoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_proto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).enterFun_proto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapiParserListener ) ((SnapiParserListener)listener).exitFun_proto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapiParserVisitor ) return ((SnapiParserVisitor<? extends T>)visitor).visitFun_proto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fun_protoContext fun_proto() throws RecognitionException {
		Fun_protoContext _localctx = new Fun_protoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fun_proto);
		int _la;
		try {
			int _alt;
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(LEFT_PAREN);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 108086391091494908L) != 0)) {
					{
					setState(115);
					fun_param();
					setState(120);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(116);
							match(COMMA);
							setState(117);
							fun_param();
							}
							} 
						}
						setState(122);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					}
					}
				}

				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(125);
					match(COMMA);
					}
				}

				setState(128);
				match(RIGHT_PAREN);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(129);
					match(COLON);
					setState(130);
					tipe(0);
					}
				}
